feat: 调整站点公共基础路径

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,6 @@
+ENV = 'development'
+
 # 站点公共基础路径
-VITE_PUBLIC_SITE_BASE_URL = '/diary-blog'
+PUBLIC_SITE_BASE_URL = '/diary-blog'
+
+PUBLIC_BASE_URL = '/diary-blog'
